[gd_scene load_steps=3 format=3 uid="uid://vwmk2hglrchl"]

[ext_resource type="Script" uid="uid://durtghjwcr77w" path="res://scenes/statsdisplay/statsdisplay.gd" id="1_0xwn0"]
[ext_resource type="FontFile" uid="uid://bdi41prsghna4" path="res://assets/PeaberryBase.ttf" id="1_uirwp"]

[node name="Statsdisplay" type="Node2D"]
texture_filter = 1
script = ExtResource("1_0xwn0")
test_score = 83

[node name="Energy" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 48.0
metadata/_edit_group_ = true

[node name="ProgressBar" type="ProgressBar" parent="Energy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_uirwp")
value = 7.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="Energy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "Energy ⚡︎"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Morale" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 53.0
offset_right = 200.0
offset_bottom = 96.0
metadata/_edit_group_ = true

[node name="ProgressBar" type="ProgressBar" parent="Morale"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_uirwp")
value = 7.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="Morale"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "Morale ☻"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hunger" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 143.0
metadata/_edit_group_ = true

[node name="ProgressBar" type="ProgressBar" parent="Hunger"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_uirwp")
value = 7.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="Hunger"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "Hunger ☕︎"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IQ" type="Label" parent="."]
offset_left = 7.0
offset_top = 149.0
offset_right = 201.0
offset_bottom = 192.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 32
text = "IQ: 100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="IQ"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.230315, 0.230315, 0.230315, 0.792157)

[node name="Comm" type="Label" parent="."]
offset_left = 7.0
offset_top = 200.0
offset_right = 201.0
offset_bottom = 243.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 32
text = "COMM: 10"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Comm"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.230315, 0.230315, 0.230315, 0.792157)

[node name="Time" type="Label" parent="."]
offset_left = 939.0
offset_top = 12.0
offset_right = 1146.0
offset_bottom = 96.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 32
text = "TIME LEFT
36:00"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Time"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.230315, 0.230315, 0.230315, 0.792157)

[node name="Project Container" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 477.0
offset_right = 207.0
offset_bottom = 639.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.230315, 0.230315, 0.230315, 0.792157)
metadata/_edit_group_ = true

[node name="Project" type="Label" parent="Project Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 32
text = "Project"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Project Container/Project"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.230315, 0.230315, 0.230315, 0.792157)

[node name="LabelTechnical" type="Label" parent="Project Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 44.0
offset_right = 13.0
offset_bottom = 87.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "Technical: "
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="ScoreTechnical" type="Label" parent="Project Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 60.0
offset_top = 44.0
offset_right = 95.0
offset_bottom = 84.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "SSS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="LabelOriginality" type="Label" parent="Project Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 81.0
offset_right = 30.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "Originality: "
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="ScoreOriginality" type="Label" parent="Project Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 60.0
offset_top = 81.0
offset_right = 95.0
offset_bottom = 121.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "SSS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="LabelUX" type="Label" parent="Project Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 123.0
offset_right = -54.0
offset_bottom = 166.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "UX:"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="ScoreUX" type="Label" parent="Project Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 60.0
offset_top = 123.0
offset_right = 95.0
offset_bottom = 163.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uirwp")
theme_override_font_sizes/font_size = 16
text = "SSS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true
